autumn/tests/compile-fail/missing_leading_slash.rs
use autumn::get;

#[get("hello")]
async fn hello() -> &'static str {
    "Hello!"
}

fn main() {}
